FIX 192614 Fixed-columns tables : an overlap display problem on the first fixed header cell

--- a/skins/default/list-head.scss
+++ b/skins/default/list-head.scss
@@ -35,6 +35,11 @@ article.list > form > table > thead {
 					}
 				}
 
+				&:first-child {
+					position: relative;
+					z-index: 1;
+				}
+
 				&.visible.lines {
 					padding: 0 .83em 0 .75em;
 
